# ModalSound

./: .gitignore  .travis.yml  Issues.md  README.md  index.html  params.json
IsoStuffer/: AUTHORS  CMakeLists.txt  INSTALL  README.md
IsoStuffer/cmake/: .FindMKL.cmake.swp  CMakeLists-qt4.txt  CMakeLists-qt5.txt  FindCBLAS.cmake  FindCppUnit.cmake  FindGSL.cmake  FindLibConfig.cmake  FindMKL.cmake  FindQGLViewer.cmake
IsoStuffer/src/: CMakeLists.txt  DistValProc.cpp  DistValProc.h  GuiMain.cpp  IsoStuffer.hpp  OctTree.cpp  OctTree.h  SimpleDistFunc.h  config.h  ellip_gen.cpp  ellip_gen_abc.cpp  main.cpp  tables.h
IsoStuffer/src/generic/: null_type.hpp  precision_type.cpp  precision_type.hpp
IsoStuffer/src/geometry/: FixVtxTetMesh.hpp  KDTree.hpp  OBBTree.hpp  OBBTreeNode.hpp  Point3.hpp  Point3KDStruct.hpp  RigidTetMesh.hpp  SurfForcedTetMesh.hpp  Tet.hpp  TetMesh.hpp  Triangle.hpp  TriangleMesh.hpp  geo2d.h
IsoStuffer/src/io/: .TglMeshReader.hpp.swp  CubicMeshGen.cpp  CubicMeshGen.h  FractureImpRecorder.cpp  FractureImpRecorder.h  MatrixIO.hpp  RigidObjDispRecorder.h  RigidObjExporter.h  RigidObjImpRecorder.cpp  RigidObjImpRecorder.h  RigidObjRecorder.cpp  RigidObjRecorder.h  StellarIO.hpp  TetMeshReader.hpp  TetMeshWriter.hpp  TglMeshReader.cpp  TglMeshReader.hpp  TglMeshWriter.hpp
IsoStuffer/src/levelset/: LevelSet3.hpp
IsoStuffer/src/linearalgebra/: DiagonalMatrix.hpp  Matrix.hpp  Matrix3.hpp  MklStdVecOpt.hpp  Quaternion.cpp  Quaternion.hpp  StdVectorOpt.hpp  Tuple3.hpp  Tuple4.hpp  Vector3.hpp  eig3.cpp  eig3.h  mat4inv.cpp  mat4inv.h
IsoStuffer/src/rigid/: CollisionConstraint.hpp  CollisionRec.hpp  DistFunc.hpp  LSCollisionDetect.hpp  LSCollisionRigidBody.hpp  RigidBody.hpp
IsoStuffer/src/ui/: IsoStufferCanvas.cpp  IsoStufferCanvas.h  IsoStufferFrame.cpp  IsoStufferFrame.h  IsoStufferFrame.ui  Params.ui  ParamsDialog.h  images.qrc
IsoStuffer/src/utils/: arrays.hpp  macros.h  math.hpp  nano_timer.c  nano_timer.h  strings.cpp  strings.hpp  trilinear.hpp  tuple.hpp
ModalSound/: CMakeLists.txt  README.md  get_libqglviewer.sh
ModalSound/cmake/: FindEigen.cmake  FindMKL.cmake  FindQGLViewer.cmake  sploosh_external.cmake  sploosh_utils.cmake
ModalSound/src/: CMakeLists.txt  config.h
ModalSound/src/collision/: RigidCollisionDetector.cpp  RigidCollisionDetector.h
ModalSound/src/colormap/: AUTUMN.h  BONE.h  ColorMap.h  JET.h  UM4.h
ModalSound/src/deformable/: fem.hpp  linear.cpp  linear.h  stvk.cpp  stvk.h  tensor.hpp
ModalSound/src/demo/: AudioProducer.cpp  AudioProducer.h  CMakeLists.txt  ClickSoundSynth.cpp  sploosh.pb.cc  sploosh.pb.h
ModalSound/src/demo/src/protobuf/: sploosh.pb.cc  sploosh.pb.h
ModalSound/src/generic/: null_type.hpp  precision_type.cpp  precision_type.hpp
ModalSound/src/geometry/: FixedVtxTetMesh.hpp  KDTree.hpp  OBBTree.hpp  OBBTreeNode.hpp  Point2.hpp  Point3.hpp  Point3KDStruct.hpp  Tet.hpp  TetMesh.hpp  Triangle.hpp  TriangleMesh.hpp  tritri.cpp  tritri.h
ModalSound/src/io/: EigenMatrixIO.hpp  IOEndian.h  MatrixIO.cpp  MatrixIO.hpp  StellarIO.hpp  TetMeshReader.hpp  TetMeshWriter.hpp  TglMeshReader.hpp  TglMeshWriter.hpp
ModalSound/src/libpython/: CMakeLists.txt  export.cpp
ModalSound/src/modal/: ModalModel.cpp  ModalModel.h  ModalShape.cpp  ModalShape.h
ModalSound/src/protobuf/: CMakeLists.txt  gen_moments.cpp  sploosh.proto
ModalSound/src/sc/: DiagonalMatrix.hpp  DirectSparseSolver.cpp  DirectSparseSolver.h  Matrix.hpp  Matrix3.hpp  PardisoMatrix.cpp  PardisoMatrix.hpp  Quaternion.hpp  SpecialFunc.hpp  SphericalFunc.hpp  SymEigen.cpp  SymEigen.hpp  Tuple2.hpp  Tuple3.hpp  Tuple4.hpp  Vector2.hpp  Vector3.hpp  cube_root.hpp  eig3.cpp  eig3.h
ModalSound/src/tests/: CMakeLists.txt  CollisionViewer.cpp  test_tri_tri_tests.cpp
ModalSound/src/tools/: CMakeLists.txt  ModesVisParams.ui  ModesVisParamsDialog.h  OBBViewer.cpp  TetViewerCanvas.cpp  TetViewerCanvas.h  TetViewerFrame.cpp  TetViewerFrame.h  check_tgl_mesh.cpp  extract_matrices.cpp  images.qrc  modal_eigen.cpp  tetviewer.ui
ModalSound/src/tools/images/.svn/: entries
ModalSound/src/tools/images/.svn/text-base/: fracture.png.svn-base
ModalSound/src/transfer/: BoundaryIntegralTransfer.hpp  FMMBoundIntTransfer.hpp  FMMTransferEval.cpp  FMMTransferEval.h  HelmholtzBasis.hpp  HelmholtzSolutions.hpp
ModalSound/src/utils/: PriorityQueue.hpp  macros.h  math.hpp  strings.cpp  strings.hpp  term_msg.h  tuple.hpp
